--- a/Step1/index.html
+++ b/Step1/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>WebGL</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="glMatrix-0.9.5.js"></script>
 </head>
 <body>
-
+    <canvas id="canvasGL"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
