--- a/Step1/index.html
+++ b/Step1/index.html
@@ -5,9 +5,13 @@
     <title>WebGL</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="glMatrix-0.9.5.js"></script>
+    <script type="text/javascript" src="Vertex_Shader_Code.js"></script>
+    <script type="text/javascript" src="Fragment_Shader_Code.js"></script>
+    <script type="text/javascript" src="initShaders.js"></script>
+
 </head>
 <body>
     <canvas id="canvasGL"></canvas>
-    <script src="script.js"></script>
+    <script src="Main_Script.js"></script>
 </body>
 </html>
